POST methods completed.

--- a/holidayTrackerApp/appsettings.json
+++ b/holidayTrackerApp/appsettings.json
@@ -1,3 +1,12 @@
-"ConnectionStrings": {
-  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HolidayTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+{
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=holiday.db"
+    }
 }
