--- a/holidayTrackerApp/holidayTrackerApp.Api.csproj
+++ b/holidayTrackerApp/holidayTrackerApp.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,12 +19,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HolidayTrackerApp.Domain\HolidayTrackerApp.Domain.csproj" />
-    <ProjectReference Include="..\HolidayTrackerApp.Infrastructure\HolidayTrackerApp.Infrastructure.csproj" />
+    <Folder Include="ClientApp\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\" />
+    <ProjectReference Include="..\HolidayTrackerApp.Application\HolidayTrackerApp.Application.csproj" />
+    <ProjectReference Include="..\HolidayTrackerApp.Domain\HolidayTrackerApp.Domain.csproj" />
+    <ProjectReference Include="..\HolidayTrackerApp.Infrastructure\HolidayTrackerApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
