--- a/holidayTrackerApp/holidayTrackerApp.Api.csproj
+++ b/holidayTrackerApp/holidayTrackerApp.Api.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
 
 
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
